* [Sheets] Fixed an issue with sheets where a long line with no word breaks (spaces) was stretching the table rather than hard wrapping. This was most apparent in automation logs with JSON output.

--- a/install/extras/developers/css/cerb.css/cerb-widgets.scss
+++ b/install/extras/developers/css/cerb.css/cerb-widgets.scss
@@ -8,6 +8,8 @@ TABLE.cerb-widget-data-table {
 	
 	td {
 		padding: 5px;
+		white-space: normal;
+		word-break: break-word;
 	}
 	
 	tbody:nth-child(even) td {
